@@ -123,6 +123,13 @@
       <artifactId>itextpdf</artifactId>
       <version>5.5.13</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.jfoenix</groupId>
+      <artifactId>jfoenix</artifactId>
+      <version>9.0.10</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -152,6 +159,10 @@
               <noManPages>true</noManPages>
               <stripDebug>true</stripDebug>
               <noHeaderFiles>true</noHeaderFiles>
+              <options>
+                <option>--add-opens</option>
+                <option>java.base/java.lang.reflect=com.jfoenix</option>
+              </options>
             </configuration>
           </execution>
         </executions>
